--- a/Minor-projects/Cloud-trail/anomaly_detector.ipynb
+++ b/Minor-projects/Cloud-trail/anomaly_detector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "64f7baa0-82b4-44bc-acc7-88bc6c1977fb",
    "metadata": {},
    "outputs": [
@@ -3741,9 +3741,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:.conda-cloud-project]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-cloud-project-py"
   },
   "language_info": {
    "codemirror_mode": {
